--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -24,5 +24,11 @@
       "dependsOn": [],
       "customAuth": false
     }
+  },
+  "storage": {
+    "s39a498bab": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
