--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-components": "^0.10.0",
     "@aws-amplify/ui-react": "^0.2.34",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
