--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "workbox-build": "^6.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
