--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "workbox-build": "^6.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node ./scripts/create-sw.js 'public' && react-scripts start",
+    "build": "react-scripts build && node ./scripts/create-sw.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
